--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -36,6 +36,6 @@
       <div cell-num="bottom-right" class="cell 9"></div>
     </div>
     </section>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
