--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -7,7 +7,7 @@
     <!-- <meta http-equiv="refresh" content="30"> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Tic Tac Toe</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
